@@ -295,7 +295,7 @@ final class KindleKeyMacOS extends KindleKey {
                 items = new ArrayList<>(Arrays.asList(new String(data).split("/")));
 
                 // Extract headerblob
-                String headerblob = items.removeFirst();
+                String headerblob = items.remove(0);
                 byte[] encryptedValue = decode(headerblob.getBytes(), charMap1);
                 byte[] cleartext = unprotectHeaderData(encryptedValue);
 
@@ -340,7 +340,7 @@ final class KindleKeyMacOS extends KindleKey {
 
                 // Process each item
                 while (!items.isEmpty()) {
-                    String item = items.removeFirst();
+                    String item = items.remove(0);
 
                     byte[] keyHash = item.substring(0, 32).getBytes(StandardCharsets.UTF_8);
                     byte[] srcnt = decode(item.substring(34).getBytes(), charMap5);
@@ -354,7 +354,7 @@ final class KindleKeyMacOS extends KindleKey {
                     ByteArrayOutputStream edlst = new ByteArrayOutputStream();
 
                     for (int i = 0; i < rcnt; i++) {
-                        String record = items.removeFirst();
+                        String record = items.remove(0);
                         edlst.write(record.getBytes(StandardCharsets.UTF_8));
                     }
 
@@ -374,7 +374,8 @@ final class KindleKeyMacOS extends KindleKey {
 
                     Debug.printf("encdata: %s%n", formatByteArray(encdata));
 
-                    int noffset = encdata.length - primes(encdata.length / 3).getLast();
+                    List<Integer> primesList = primes(encdata.length / 3);
+                    int noffset = encdata.length - primesList.get(primesList.size() - 1);
                     byte[] pfx = Arrays.copyOfRange(encdata, 0, noffset);
                     byte[] suffix = Arrays.copyOfRange(encdata, noffset, encdata.length);
 
